<resources>
    <string name="app_name">Inmunes</string>


    <!--ACTIVITY_MAIN-->
    <string name="noExiste">This user dosent exist!</string>
    <string name="incorrecta">Password incorrect!</string>
    <string name="edittextNombreUsuario">Username</string>
    <string name="edittextContraseña">Password</string>
    <string name="buttonIniciarSesion">Login</string>
    <string name="edittextRegistrate">Sign In</string>
    <string name="buttonEmpresa">Company</string>
    <string name="url">http://ec2-100-26-220-203.compute-1.amazonaws.com:8080</string>
    <!--ACTIVITY_USUARIO_REGISTRAR-->
    <string name="edittextNombreUsuario2">Username</string>
    <string name="edittextEmail">Email</string>
    <string name="edittextContraseña2">Password</string>
    <string name="edittextTelefono">Phone</string>
    <string name="buttonRegistrar">Create</string>

    <!--ACTIVITY_USUARIO_DETALLE-->
    <string name="buttonVerMenu">HOME</string>
    <string name="buttonModificar">Edit</string>

    <!--ACTIVITY_USUARIO_MENU-->
    <string name="edittextBuscadorServicios">Search service</string>

    <!--ACTIVITY_EMPRESA_LISTADO-->
    <string name="edittextBuscadorEmpresa">Search company</string>
    <string name="buttonEmpresaListado"> Companies</string>
    <string name="buttonEmpresaNueva">New company</string>

    <!--ACTIVITY_SERVICIO_DETALLE-->
    <string name="buttonContactar">Contact us</string>

    <!--ACTIVITY_EMPRESA_DETALLE-->
    <string name="buttonListaServicios"> services</string>

    <!--ACTIVITY_SERVICIO_LISTADO-->
    <string name="edittextBuscadorServicios2">Search service</string>
    <string name="buttonServicioNuevo">New service</string>

    <!--ACTIVITY_ADD_SERVICIO-->
    <string name="updateService">Update a service</string>
    <string name="update">UPDATE</string>
    <string name="edittextTipoServicio">Type </string>
    <string name="edittextDescripcionServicios">Description </string>
    <string name="buttonaniadirServicio">Add </string>

    <!--ACTIVITY_EMP_SERVICIO_DETALLE-->
    <string name="buttonBorrarServicio">Delete</string>

    <!--ACTIVITY_EMP_SERVICIO_DETALLE-->Services Details
    <string name="detailService">Services Details</string>
    <string name="buttonNuevoServicio">New</string>
    <string name="title_activity_usuario_menu2">UsuarioMenu2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--ACTIVITY_PRINCIPAL_USER_COMPANY-->
    <string name="buttonUser">User</string>
    <string name="buttonCompany">Company</string>

    <!--ACTIVITY_PRINCIPAL_USER_COMPANY-->
    <string name="buttonCompanyLogin">Contact us</string>

</resources>
