<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"

        android:background="@drawable/edittextredondos"
        android:drawableLeft="@drawable/icon_username_foreground"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/edittextNombreUsuario2"
        android:inputType="textPersonName"
        android:textColorHint="#151515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"

        android:background="@drawable/edittextredondos"
        android:drawableLeft="@drawable/icon_email_foreground"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/edittextEmail"
        android:inputType="textPersonName"
        android:textColorHint="#191A1A"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextredondos"
        android:fontFamily="sans-serif"

        android:drawableLeft="@drawable/icon_password_foreground"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/edittextContraseña2"
        android:inputType="textPersonName"
        android:textColorHint="#0D0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"

        android:background="@drawable/edittextredondos"
        android:drawableLeft="@drawable/icon_phone_foreground"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/edittextTelefono"
        android:inputType="textPersonName"
        android:textColorHint="#0B0C0C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"

        android:background="@drawable/btn_ripple"
        android:gravity="center"
        android:text="@string/buttonRegistrar"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"

        android:background="@drawable/edittextredondos"
        android:button="@drawable/icon_check_off_foreground"
        android:gravity="center|left"
        android:text="Inmune"
        android:textColor="#080909"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="159dp"
        android:layout_height="117dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animaboton" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:fontFamily="sans-serif"

        android:gravity="center"
        android:text="Create an account"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>